[package]
name = "tide-tera"
version = "0.1.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"

[dependencies]
tide = "0.11.0"
tera = "1.3.1"

[dev-dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }

[patch.crates-io]
http-types = { git = "https://github.com/jbr/http-types", branch = "body-set-mime" }
