[package]
name = "tide-tera"
version = "0.1.1"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "Use tera templates on tide"
keywords = ["tide", "tera", "web", "template"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jbr/tide-tera"

[dependencies]
tide = "0.11.0"
tera = "1.3.1"

[dev-dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
