[package]
name = "tide-tera"
version = "0.2.3"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "Use tera templates on tide"
keywords = ["tide", "tera", "web", "template"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jbr/tide-tera"

[dependencies]
tide = { version = "0.16.0", default-features = false }
tera = "1.5.0"

[dev-dependencies]
tide = { version = "0.16.0", default-features = true }
async-std = { version = "1.6.5", features = ["attributes"] }
